--- a/style.css
+++ b/style.css
@@ -138,3 +138,29 @@ main {
   border: 1px solid white;
   border-radius: 50%;
 }
+
+/* == RESPONSIVE == */
+@media (max-width: 375px) {
+  .product-img {
+    width: 278px;
+    height: 278px;
+  }
+
+  .product-title,
+  .product-desc,
+  .stats {
+    width: 278px;
+  }
+
+  .product-title {
+    margin-bottom: 12px;
+  }
+
+  .product-desc {
+    margin-bottom: 16px;
+  }
+
+  .stats {
+    margin-bottom: 16px;
+  }
+}
